some fixes on mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,14 @@ body {
     overflow: hidden;
     background-color: #282c34;
     position: fixed;
+    display: inline-block;
     top: 0;
     width: 100%;
-    max-height: 80px;
+    height: 70px;
+}
+
+.main-container {
+    padding-top: 72px;
 }
 
 .nav a {
@@ -46,80 +51,12 @@ body {
 }
 
 .about {
-    padding-top: 80px;
     display: flex;
     flex-direction: row;
 }
 
 * {
     box-sizing: border-box;
-}
-
-.timeline {
-    position: relative;
-    max-width: 40%;
-    margin: 0;
-}
-
-.timeline::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: black;
-    top: 0;
-    bottom: 0;
-    left: 31px;
-    margin-left: -3px;
-}
-
-.timeline-container {
-    padding-left: 70px;
-    padding-right: 25px;
-    position: relative;
-    background-color: inherit;
-    width: 100%;
-}
-
-.timeline-container::after {
-    content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    right: -17px;
-    background-color: white;
-    border: 4px solid #FF9F55;
-    top: 15px;
-    border-radius: 50%;
-    z-index: 1;
-}
-
-.right-timeline-item {
-    left: 50%;
-}
-
-.right-timeline-item::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid green;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent green transparent transparent;
-}
-
-.right-timeline-item::after {
-    left: -16px;
-}
-
-.timeline-item-content {
-    padding: 20px 30px;
-    background-color: green;
-    position: relative;
-    border-radius: 6px;
-    left: 0%;
 }
 
 .section {
@@ -164,4 +101,43 @@ body {
     cursor: pointer;
     color: white;
     float: right;
+}
+
+.image {
+    content:url("resources/img.JPG");
+    border-radius: 10px;
+    margin: auto;
+    width: 90%;
+}
+
+.table {
+    text-decoration: none;
+}
+
+@media screen and (max-width: 700px) {
+    .about {
+        display: inline-block;
+    }
+
+    .nav {
+        height: 160px;
+    }
+
+    .nav a {
+        width: 100%;
+    }
+
+    .image {
+        float: left;
+    }
+
+    .main-container {
+        padding-top: 165px;
+    }
+
+    .sidebar {
+        width: 100%;
+        border-right: none;
+    }
+
 }
